# FIRE-Calculator-SG-edition

./: .gitignore  GEMINI.md  README.md  build.py  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
src/: constants.py  defaults.py  engine.py  models.py  plotting.py  sidebar.py  utils.py
tests/: conftest.py  test_defaults.py  test_engine.py  test_integration.py  test_models.py  test_plotting.py  test_sidebar.py  test_utils.py
